apps/base/minecraft/spectrum/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: spectrum
  namespace: app-minecraft

spec:
  selector:
    matchLabels:
      app: spectrum
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 1
    maxSurge: 1
  template:
    metadata:
      labels:
        app: spectrum
    spec:
      terminationGracePeriodSeconds: 130
      containers:
        - name: survival
          image: ghcr.io/decentm/minecraft-servers:spectrum-02c7ac10d213a08044c32194ff75452cfbb151fd
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: IfNotPresent
          readinessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "/data/lifecycle/pre-stop.sh"]
          ports:
            - containerPort: 25566
            - containerPort: 25575
            - containerPort: 25567
            - containerPort: 25578
          volumeMounts:
            - name: survival-server
              mountPath: /server
            - name: survival-logs
              mountPath: /data/logs
            - name: survival-world
              mountPath: /data/world
        - name: proxy
          image: ghcr.io/decentm/minecraft-servers:proxy-02c7ac10d213a08044c32194ff75452cfbb151fd
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 25565
              protocol: TCP
          volumeMounts:
            - name: forwarding-secret
              mountPath: /forwarding-secret
              subPath: forwarding-secret
              readOnly: true
        - name: fallback
          image: ghcr.io/decentm/minecraft-servers:fallback-86882c868ddfad924bb71b37e23ae834a8173a81
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: IfNotPresent
          readinessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 25567
          volumeMounts:
            - name: fallback-server
              mountPath: /server
            - name: fallback-logs
              mountPath: /data/logs
      volumes:
        - name: survival-logs
          persistentVolumeClaim:
            claimName: spectrum-logs
        - name: fallback-logs
          persistentVolumeClaim:
            claimName: fallback-logs
        - name: proxy-logs
          persistentVolumeClaim:
            claimName: proxy-logs
        - name: survival-server
          persistentVolumeClaim:
            claimName: survival-server
        - name: fallback-server
          persistentVolumeClaim:
            claimName: fallback-server
        - name: survival-world
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-spectrum/world
            type: Directory
        - name: forwarding-secret
          secret:
            secretName: secrets
            items:
              - key: PROXY_SECRET
                path: forwarding-secret
