apps/base/minecraft/spectrum/fallback.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: spectrum-fallback
  namespace: app-minecraft

spec:
  selector:
    matchLabels:
      app: spectrum-fallback
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: spectrum-fallback
    spec:
      terminationGracePeriodSeconds: 130
      containers:
        - name: fallback
          image: ghcr.io/decentm/minecraft-servers:fallback-5f6064b8c75a08c8778ecc74c722cfff9bc99106
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: IfNotPresent
          readinessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            exec:
              command: ["/usr/local/bin/mc-health"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 25567
          volumeMounts:
            - name: fallback-server
              mountPath: /server
            - name: fallback-logs
              mountPath: /data/logs
      volumes:
        - name: fallback-logs
          persistentVolumeClaim:
            claimName: fallback-logs
        - name: fallback-server
          persistentVolumeClaim:
            claimName: fallback-server
---
apiVersion: v1
kind: Service
metadata:
  name: spectrum-internal-fallback
  namespace: app-minecraft

spec:
  selector:
    app: spectrum-fallback
  ports:
    - name: mc
      port: 25567
