apps/base/minecraft/spectrum/mc-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-monitor
  namespace: app-minecraft
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mc-monitor
  replicas: 1
  template:
    metadata:
      labels:
        app: mc-monitor
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      containers:
        - name: mc-monitor
          image: itzg/mc-monitor:0.16.6
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          args:
            - export-for-prometheus
          ports:
            - containerPort: 8080
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: mc-monitor
  namespace: app-minecraft
  labels:
    app: mc-monitor
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
  selector:
    app: mc-monitor
