apps/base/minecraft/spectrum/proxy.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: spectrum-proxy
  namespace: app-minecraft

spec:
  selector:
    matchLabels:
      app: spectrum-proxy
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: spectrum-proxy
    spec:
      terminationGracePeriodSeconds: 130
      containers:
        - name: proxy
          image: ghcr.io/decentm/minecraft-servers:proxy-9b404b9a08840f5f4bfeb7625793153051241754
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 25565
              protocol: TCP
          volumeMounts:
            - name: forwarding-secret
              mountPath: /forwarding-secret
              subPath: forwarding-secret
              readOnly: true
      volumes:
        - name: proxy-logs
          persistentVolumeClaim:
            claimName: proxy-logs
        - name: forwarding-secret
          secret:
            secretName: secrets
            items:
              - key: PROXY_SECRET
                path: forwarding-secret
---
apiVersion: v1
kind: Service
metadata:
  name: spectrum-mc
  namespace: app-minecraft

spec:
  type: NodePort
  selector:
    app: spectrum-proxy
  ports:
    - name: mc
      port: 25565
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: spectrum-mc-tun
  namespace: app-minecraft

spec:
  selector:
    app: spectrum-proxy
  ports:
    - name: mc
      port: 25565
