apps/base/minecraft/spectrum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spectrum-rp
  namespace: app-minecraft

spec:
  selector:
    app: spectrum
  ports:
    - name: rp
      port: 25578
---
apiVersion: v1
kind: Service
metadata:
  name: spectrum-mc
  namespace: app-minecraft

spec:
  type: NodePort
  selector:
    app: spectrum
  ports:
    - name: mc
      port: 25565
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: spectrum-rcon
  namespace: app-minecraft

spec:
  selector:
    app: spectrum
  ports:
    - name: rcon
      port: 25575
