apps/base/minecraft/spectrum/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-spectrum
  namespace: app-minecraft

spec:
  ports:
    - name: tcp
      port: 25565
  selector:
    app: spectrum
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-default
  namespace: app-minecraft

spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: spectrum
          port: 25565
